@@ -52,16 +52,9 @@ typedef struct WinScrollbar {
 
 static int initialized = 0;
 static int hArrowWidth, hThumb; /* Horizontal control metrics. */
-static int vArrowWidth, vArrowHeight, vThumb; /* Vertical control metrics. */
+static int vArrowHeight, vThumb; /* Vertical control metrics. */
 
 TCL_DECLARE_MUTEX(winScrlbrMutex)
-
-/*
- * This variable holds the default width for a scrollbar in string form for
- * use in a Tk_ConfigSpec.
- */
-
-static char defWidth[TCL_INTEGER_SPACE];
 
 /*
  * Declarations for functions defined in this file.
@@ -361,21 +354,14 @@ TkpDestroyScrollbar(
 void
 UpdateScrollbarMetrics(void)
 {
-    Tk_ConfigSpec *specPtr;
+    int arrowWidth = GetSystemMetrics(SM_CXVSCROLL);
 
     hArrowWidth = GetSystemMetrics(SM_CXHSCROLL);
     hThumb = GetSystemMetrics(SM_CXHTHUMB);
-    vArrowWidth = GetSystemMetrics(SM_CXVSCROLL);
     vArrowHeight = GetSystemMetrics(SM_CYVSCROLL);
     vThumb = GetSystemMetrics(SM_CYVTHUMB);
 
-    sprintf(defWidth, "%d", vArrowWidth);
-    for (specPtr = tkpScrollbarConfigSpecs; specPtr->type != TK_CONFIG_END;
-	    specPtr++) {
-	if (specPtr->offset == Tk_Offset(TkScrollbar, width)) {
-	    specPtr->defValue = defWidth;
-	}
-    }
+    sprintf(tkDefScrollbarWidth, "%d", arrowWidth);
 }
 
 /*
